# GPT-Without-Libraries

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: CLAUDE.md  README.md  VERSIONS.md  final_training_report.md  punctuation_fix_report.md  real_data_training_report.md
examples/: fixed_dataset.py  fixed_training.py  improved_dataset.py  improved_training.py  main.py  quick_real_data_training.py  real_data_training.py
src/gpt_without_libs/: __init__.py
src/gpt_without_libs/models/: __init__.py
src/gpt_without_libs/models/core/: __init__.py  mini_gpt.py
src/gpt_without_libs/models/layers/: __init__.py  attention.py  embedding.py  feedforward.py  layer_norm.py  positional_encoding.py  transformer_block.py
src/gpt_without_libs/training/: __init__.py  training.py
src/gpt_without_libs/utils/: __init__.py  tokenizer.py
tests/: test_all.py
